objects/Step_Forward_Job_Placement__c.object
<CustomObject>
    <fields>
        <fullName>AAT_Registration_Number__c</fullName>
        <inlineHelpText>Used by Delivery</inlineHelpText>
        <label>AAT Registration Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Learning_needs_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Learning needs - Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_of_Associate__c</fullName>
        <formula>(TODAY()- Associate_Date_Of_Birth__c) /365.2425</formula>
        <label>Age of Associate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreed_Fee_for_Employer__c</fullName>
        <formula>Step_Forward_Job__r.Agreed_Fee_for_Employer__c</formula>
        <label>Agreed Fee for Employer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Update__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Updates &quot;Allocated Associate/Job Name&quot; fields on SF Job and SF Activity</inlineHelpText>
        <label>Allocated Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apprenticeship_Framework_and_Level_del__c</fullName>
        <formula>IF( Pathway__c = &quot;Accounting&quot;, &quot;AAT - Level 3 Diploma in Accounting&quot;, 
 IF(Pathway__c = &quot;Business Administration&quot;, &quot;Pearsons - Level 3 Diploma in Business &amp; Administration&quot;, 
 IF(Pathway__c = &quot;IT, Software and Telecoms&quot;, &quot;Pearsons - Level 3 Diploma in IT, Software, Web &amp; Telecoms Professionals&quot;, 
 IF(Pathway__c = &quot;Social Media &amp; Digital Marketing&quot;, &quot;Skills First - Level 3 Diploma in Social Media &amp; Digital Marketing&quot;, 
 IF(Pathway__c = &quot;Early Years Education&quot;, &quot;Pearsons - Level 3 Diploma for the Children and Young People&apos;s Workforce&quot;, 
 IF(Pathway__c = &quot;Hospitality&quot;, &quot;Advance Level Apprenticeship in Hospitality Supervision and Leadership&quot;,&quot;&quot; ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To be included in Apprenticeship Agreement for Employer</inlineHelpText>
        <label>Apprenticeship Framework and Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor__c</fullName>
        <label>Assessor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Code_of_Conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associate Code of Conduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associate_Contract_notes__c</fullName>
        <label>Associate Contract notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Associate_Date_Of_Birth__c</fullName>
        <formula>Step_Forward_Activity__r.Date_of_birth_StepFwd_check__c</formula>
        <label>Associate Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Associate_Email1__c</fullName>
        <inlineHelpText>Email of YP</inlineHelpText>
        <label>Associate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Associate_First_Name__c</fullName>
        <formula>Step_Forward_Activity__r.Associate__r.FirstName</formula>
        <label>Associate First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_General_Info_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associate General Info Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associate_Last_Name__c</fullName>
        <formula>Step_Forward_Activity__r.Associate__r.LastName</formula>
        <label>Associate Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Lastname__c</fullName>
        <formula>Step_Forward_Activity__r.Associate__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associate Lastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Work_email__c</fullName>
        <inlineHelpText>Used by Delivery</inlineHelpText>
        <label>Associate Work email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Associate_Work_phone_number__c</fullName>
        <inlineHelpText>Used by Delivery</inlineHelpText>
        <label>Associate Work phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <formula>Step_Forward_Activity__r.Associate__r.FirstName + &quot; &quot; + Step_Forward_Activity__r.Associate__r.LastName</formula>
        <label>Associate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_address__c</fullName>
        <formula>if(Step_Forward_Activity__r.Address_Line_1__c&lt;&gt;&quot;&quot;,Step_Forward_Activity__r.Address_Line_1__c &amp;&quot;, &quot;,&quot;&quot;)&amp;
if(Step_Forward_Activity__r.Address_Line_2__c&lt;&gt;&quot;&quot;,Step_Forward_Activity__r.Address_Line_2__c &amp;&quot;,&quot;,&quot;&quot;)&amp;
if(Step_Forward_Activity__r.Address_Line_3__c&lt;&gt;&quot;&quot;,Step_Forward_Activity__r.Address_Line_3__c&amp;&quot;, &quot;,&quot;&quot;)&amp;
if(Step_Forward_Activity__r.Address_Post_Code__c&lt;&gt;&quot;&quot;,Step_Forward_Activity__r.Address_Post_Code__c,&quot;&quot;)</formula>
        <label>Associate address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_email__c</fullName>
        <formula>Step_Forward_Activity__r.Associate_StepFwd_email__c</formula>
        <label>Associate email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_has_additional_Learning_needs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associate has additional Learning needs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associate_tel__c</fullName>
        <formula>Step_Forward_Activity__r.Associate_StepFwd_Mobile__c</formula>
        <label>Associate tel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSKB_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BSKB complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_1_Date_and_time_of_assessor_visit__c</fullName>
        <inlineHelpText>Used by Delivery</inlineHelpText>
        <label>Block 1: Date and time of assessor visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Training_dates__c</fullName>
        <label>Block Training dates</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracting_Lead_Employer__c</fullName>
        <formula>Step_Forward_Job__r.Contracting_Lead_Employer__c</formula>
        <label>Contracting Lead Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracting_Lead_Employer_email__c</fullName>
        <formula>Step_Forward_Job__r.Contracting_Lead_Employer_Email__c</formula>
        <label>Contracting Lead Employer email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracting_Lead_Step_Forward__c</fullName>
        <formula>Step_Forward_Job__r.Contracting_Lead_Step_Forward__c</formula>
        <label>Contracting Lead Step Forward</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracting_Lead_Step_Forward_email__c</fullName>
        <formula>Step_Forward_Job__r.Contracting_Lead_Step_Forward_email__c</formula>
        <label>Contracting Lead Step Forward email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracting_Status__c</fullName>
        <formula>if( Learning_Agreement__c=true &amp;&amp; Associate_General_Info_Form__c=true &amp;&amp; Step_Forward_Agreement__c=true &amp;&amp; Associate_Code_of_Conduct__c=true &amp;&amp; BSKB_complete__c=true,&quot;Complete&quot;,
if(ispickval(Step_Forward_Placement_Status__c,&quot;Withdrawal of Associate - unmatched&quot;),&quot;Withdrawal of Associate&quot;,
if(ispickval(Step_Forward_Placement_Status__c,&quot;Withdrawal of Employer - unmatched&quot;),&quot;Withdrawal of Employer&quot;,&quot;Incomplete&quot;)))</formula>
        <label>Contracting Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracting_Status_for_Activity__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Always Keep ticked!  
Updates Contracting Status on SF Activity</inlineHelpText>
        <label>Contracting Status for Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contracts_Company_and_Charity_Numbers__c</fullName>
        <formula>if(and(Not(isblank(Registered_Charity_Number__c)),not(isblank(Registered_Company_Number__c))),&quot;registered charity no. &quot;&amp;Registered_Charity_Number__c&amp;&quot; and registered company no. &quot;&amp;Registered_Company_Number__c,
if(and(not(isblank(Registered_Charity_Number__c)),isblank(Registered_Company_Number__c)),&quot;registered charity no. &quot;&amp;Registered_Charity_Number__c,
if(and(isblank(Registered_Charity_Number__c),not(isblank(Registered_Company_Number__c))),&quot;registered company no. &quot;&amp;Registered_Company_Number__c,&quot; &quot;)))</formula>
        <label>Contracts: Company and Charity Numbers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB_Check__c</fullName>
        <formula>Step_Forward_Activity__r.DOB_check__c</formula>
        <label>DOB Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_BKSB_Login_sent_to_Associate__c</fullName>
        <label>Date BKSB Login sent to Associate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_BKSB_completed_by_Associate__c</fullName>
        <label>Date BKSB completed by Associate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Barometer_Survey_Received__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>This will record the date the Barometer Survey was received</description>
        <label>Date Barometer Survey Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Barometer_Survey_Reminder_Sent__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date Barometer Survey Reminder Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Barometer_Survey_Sent__c</fullName>
        <description>This will record the date the SF Barometer Email was sent</description>
        <label>Date Barometer Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Code_of_Conduct_returned_frm_Assoc__c</fullName>
        <label>Date Code of Conduct returned frm Assoc.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Code_of_Conduct_sent_to_Associate__c</fullName>
        <label>Date Code of Conduct sent to Associate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_DBS_Update_Service_details_sent__c</fullName>
        <label>Date DBS Update Service details sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Final_allocation_call_Assoc__c</fullName>
        <label>Date Final allocation call Assoc</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Final_allocation_call_Empl__c</fullName>
        <label>Date Final allocation call Empl</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_General_Info_form_sent_to_Associate__c</fullName>
        <label>Date General Info form sent to Associate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_General_Info_returned_from_Assoc__c</fullName>
        <label>Date General Info returned from Assoc.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Learning_Agreement_created__c</fullName>
        <inlineHelpText>Date of the Learning Agreement</inlineHelpText>
        <label>Date Learning Agreement created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Learning_Agreement_returned_frm_Emp__c</fullName>
        <label>Date Learning Agreement returned frm Emp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Learning_Agreement_returned_from_YP__c</fullName>
        <label>Date Learning Agreement returned from YP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Learning_Agreement_sent_to_YP__c</fullName>
        <label>Date Learning Agreement sent to YP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Learning_Agreement_sent_to_employer__c</fullName>
        <label>Date Learning Agreement sent to employer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Programme_Started__c</fullName>
        <inlineHelpText>Used by Delivery</inlineHelpText>
        <label>Date Programme Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Step_Forward_Agreement_created__c</fullName>
        <inlineHelpText>Date of the Step Forward Agreement</inlineHelpText>
        <label>Date Step Forward Agreement created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Step_Forward_Agreement_sent_to_Emp__c</fullName>
        <label>Date Step Forward Agreement sent to Emp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Stp_Fwd_Agreement_returned_from_Emp__c</fullName>
        <label>Date Stp Fwd Agreement returned from Emp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_all_signed_contracts_sent_to_Assoc__c</fullName>
        <label>Date all signed contracts sent to Assoc.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_all_signed_contracts_sent_to_empl__c</fullName>
        <label>Date all signed contracts sent to empl.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Agreement__c</fullName>
        <inlineHelpText>Fill in this field for date to show on a generated document</inlineHelpText>
        <label>Date of Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Interview__c</fullName>
        <label>Date of Interview</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Step_Team__c</fullName>
        <inlineHelpText>Used by Delivery</inlineHelpText>
        <label>Delivery Step Team</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dietary_requirements_for_Induction__c</fullName>
        <label>Dietary requirements for Induction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_Name__c</fullName>
        <formula>Step_Forward_Job__r.Step_Forward_Account_Management_Name__r.Step_Forward_main_contact__r.FirstName &amp;&quot; &quot;&amp;  Step_Forward_Job__r.Step_Forward_Account_Management_Name__r.Step_Forward_main_contact__r.LastName</formula>
        <label>Employer Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_Tel__c</fullName>
        <formula>Step_Forward_Job__r.Step_Forward_Account_Management_Name__r.Main_contact_numbers__c</formula>
        <label>Employer Contact Tel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_email__c</fullName>
        <formula>Step_Forward_Job__r.Step_Forward_Account_Management_Name__r.Main_contact_email__c</formula>
        <label>Employer Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Contract_notes__c</fullName>
        <label>Employer Contract notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Identifier__c</fullName>
        <label>Employer Identifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Job_Address__c</fullName>
        <formula>Step_Forward_Job__r.Job_Address__c &amp;br()&amp;
 Step_Forward_Job__r.Job_Postcode__c</formula>
        <label>Employer Job Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Notes__c</fullName>
        <inlineHelpText>Notes from SF Job
- edit and save the record to refresh</inlineHelpText>
        <label>Employer Notes</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <formula>Step_Forward_Job__r.Employer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_liability_insurance_expiry_date__c</fullName>
        <formula>Step_Forward_Job__r.Employer_liability_insurance_expiry__c</formula>
        <label>Employer liability insurance expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <formula>text(Step_Forward_Activity__r.Ethnicity__c)</formula>
        <label>Ethnicity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>Event Date mapped to SFJP to allow the tracking of time from interview to contract sent</description>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_ELI_check_done__c</fullName>
        <label>Final ELI check done</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_QC_Check__c</fullName>
        <description>Status mapped from SF Job so that Matching know when contracts can be sent</description>
        <formula>Step_Forward_Job__r.Final_QC_check__c</formula>
        <label>Final QC Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework_code__c</fullName>
        <formula>if(Pathway__c=&quot;Accounting&quot;,&quot;454&quot;,
if(Pathway__c=&quot;Business Administration&quot;,&quot;490&quot;,
if(Pathway__c=&quot;IT, Software and Telecoms&quot;,&quot;418&quot;,
if(Pathway__c=&quot;Social Media &amp; Digital Marketing&quot;,&quot;579&quot;,
if(Pathway__c=&quot;Early Years Education&quot;,&quot;445&quot;,
if(Pathway__c=&quot;Hospitality&quot;,&quot;583&quot;,&quot; &quot;))))))</formula>
        <label>Framework code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Funding_Indicator__c</fullName>
        <formula>if(Age_of_Associate__c&lt;=18,1,
if(Age_of_Associate__c&gt;=19,2,34404))</formula>
        <label>Full Funding Indicator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>text(Step_Forward_Activity__r.Gender__c)</formula>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_1_Match__c</fullName>
        <formula>if(Step_Forward_Activity__r.Group_1_Score__c+(Step_Forward_Job__r.Group_11__c)&lt;0,((Step_Forward_Activity__r.Group_1_Score__c+(Step_Forward_Job__r.Group_11__c))-(Step_Forward_Activity__r.Group_1_Score__c+(Step_Forward_Job__r.Group_11__c))-(Step_Forward_Activity__r.Group_1_Score__c+(Step_Forward_Job__r.Group_11__c))),(Step_Forward_Activity__r.Group_1_Score__c+(Step_Forward_Job__r.Group_11__c)))</formula>
        <label>Group 1 Match</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_2_Match__c</fullName>
        <formula>if(Step_Forward_Activity__r.Group_2_Score__c+(Step_Forward_Job__r.Group_21__c)&lt;0,((Step_Forward_Activity__r.Group_2_Score__c+(Step_Forward_Job__r.Group_21__c))-(Step_Forward_Activity__r.Group_2_Score__c+(Step_Forward_Job__r.Group_21__c))-(Step_Forward_Activity__r.Group_2_Score__c+(Step_Forward_Job__r.Group_21__c))),(Step_Forward_Activity__r.Group_2_Score__c+(Step_Forward_Job__r.Group_21__c)))</formula>
        <label>Group 2 Match</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_3_Match__c</fullName>
        <formula>if(Step_Forward_Activity__r.Group_3_Score__c+(Step_Forward_Job__r.Group_31__c)&lt;0,((Step_Forward_Activity__r.Group_3_Score__c+(Step_Forward_Job__r.Group_31__c))-(Step_Forward_Activity__r.Group_3_Score__c+(Step_Forward_Job__r.Group_31__c))-(Step_Forward_Activity__r.Group_3_Score__c+(Step_Forward_Job__r.Group_31__c))),(Step_Forward_Activity__r.Group_3_Score__c+(Step_Forward_Job__r.Group_31__c)))</formula>
        <label>Group 3 Match</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Induction_Attendance_Status__c</fullName>
        <formula>text(Step_Forward_Activity__r.Induction_Attendance_Status__c)</formula>
        <label>Induction Attendance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Induction_Details__c</fullName>
        <formula>if(ispickval(Induction_date__c,&quot;Induction 1&quot;),&quot;Induction dates: Saturday 22nd Aug 2015-Tuesday 25th Aug 2015&quot; &amp;br()&amp;
&quot;Departure address: tbc&quot; &amp;br()&amp;
&quot;Arrival time: tbc&quot;,

if(ispickval(Induction_date__c,&quot;Induction 2&quot;),&quot;Induction dates: Thursday 27th Aug 2015-Sunday 30th Aug 2015&quot; &amp;br()&amp;
&quot;Departure address: tbc&quot; &amp;br()&amp;
&quot;Arrival time: tbc&quot;,&quot; &quot;))</formula>
        <label>Induction Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Induction_Status__c</fullName>
        <formula>text(Step_Forward_Activity__r.Induction_Status__c)</formula>
        <label>Induction Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Induction_date__c</fullName>
        <inlineHelpText>Induction 1 - Saturday 22nd August 2015 to Tuesday 25th August 2015
Induction 2 - Thursday 27th August 20015 to Sunday 30th August 2015</inlineHelpText>
        <label>Induction date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Induction 1</fullName>
                </value>
                <value>
                    <fullName>Induction 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Contact_Name__c</fullName>
        <formula>Step_Forward_Job__r.Job_main_contact__r.FirstName &amp; &quot; &quot; &amp;  Step_Forward_Job__r.Job_main_contact__r.LastName</formula>
        <label>Job Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Contact_Phone__c</fullName>
        <formula>Step_Forward_Job__r.Job_main_contact__r.MobilePhone</formula>
        <label>Job Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Contact_email__c</fullName>
        <formula>Step_Forward_Job__r.Job_main_contact__r.Email</formula>
        <label>Job Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Placement_Notes_Entry__c</fullName>
        <inlineHelpText>Type your Notes in here.</inlineHelpText>
        <label>Job Placement Notes Entry</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Placement_Notes__c</fullName>
        <label>Job Placement Notes</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Learning_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Learning Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learning_aim_reference__c</fullName>
        <formula>if(Pathway__c=&quot;Accounting&quot;,&quot;60069089&quot;,
if(Pathway__c=&quot;Business Administration&quot;,&quot;60134069&quot;,
if(Pathway__c=&quot;IT, Software and Telecoms&quot;,&quot;50112910&quot;,
if(Pathway__c=&quot;Social Media &amp; Digital Marketing&quot;,&quot;60112098&quot;,
if(Pathway__c=&quot;Early Years Education&quot;,&quot;60129633&quot;,&quot;ERROR&quot;)))))</formula>
        <label>Learning aim reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Step Forward Job Placements</relationshipLabel>
        <relationshipName>Step_Forward_Job_Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Manager_email__c</fullName>
        <formula>Line_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Manager email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Manager_telephone__c</fullName>
        <formula>&quot;Phone : &quot;&amp;  Line_Manager__r.Phone  &amp; BR()&amp;
&quot;Mobile: &quot;&amp;  Line_Manager__r.MobilePhone  &amp; br()&amp;
&quot;Work : &quot;&amp;  Line_Manager__r.npe01__WorkPhone__c</formula>
        <label>Line Manager telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Definition__c</fullName>
        <formula>if(and(value(Match_Quality_Static__c)&gt;0,value(Match_Quality_Static__c)&lt;=3), 

&quot;Near Perfect Match&quot;, 

if(and(value(Match_Quality_Static__c)&gt;3,value(Match_Quality_Static__c)&lt;=6),
 
&quot;Match&quot;,

if(and(value(Match_Quality_Static__c)&gt;6,value(Match_Quality_Static__c)&lt;=10), 

&quot;Weak Match&quot;,

if(and(value(Match_Quality_Static__c)&gt;10,value(Match_Quality_Static__c)&lt;=18), 

&quot;Poor Match&quot;,&quot;Perfect Match&quot;))))</formula>
        <label>Match Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Quality_Static__c</fullName>
        <label>Match Quality - Static</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Quality__c</fullName>
        <formula>text((Group_1_Match__c)+(Group_2_Match__c)+(Group_3_Match__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>0 = perfect match
1-3 = near perfect match
4-6 = match
7 -10 = weak match
11-18 = Poor match</inlineHelpText>
        <label>Match Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Day__c</fullName>
        <formula>text(Step_Forward_Activity__r.Matching_date_shortlisted_for__c)</formula>
        <label>Matching Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Notes__c</fullName>
        <label>Matching Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Matching_day_details__c</fullName>
        <label>Matching day details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <inlineHelpText>Used by Delivery</inlineHelpText>
        <label>Mentor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_and_Year_of_SF_Barometer__c</fullName>
        <description>This field shows the month and year of when the current Barometer Survey was received</description>
        <formula>TEXT(MONTH( Date_Barometer_Survey_Received__c )) &amp; &quot;-&quot; &amp; TEXT(YEAR( Date_Barometer_Survey_Received__c ))</formula>
        <label>Month and Year of SF Barometer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Insurance_Number__c</fullName>
        <label>National Insurance Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_YP_Status__c</fullName>
        <formula>text(Step_Forward_Activity__r.YP_Overall_Status__c)</formula>
        <label>Overall YP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pathway__c</fullName>
        <formula>text(Step_Forward_Job__r.Pathway__c)</formula>
        <label>Pathway</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pearson_Registration_Number__c</fullName>
        <inlineHelpText>Used by Delivery</inlineHelpText>
        <label>Pearson Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programme_Status__c</fullName>
        <inlineHelpText>Used by Delivery</inlineHelpText>
        <label>Programme Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed Programme</fullName>
                </value>
                <value>
                    <fullName>Dropped out - registered</fullName>
                </value>
                <value>
                    <fullName>Dropped out - not registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programme_of_Learning__c</fullName>
        <formula>if(Pathway__c=&quot;Accounting&quot;,&quot;AAT Level 3 Diploma in Accounting&quot;,
if(Pathway__c=&quot;Business Administration&quot;,&quot;Pearson BTEC Level 3 Diploma in Business Administration (QCF)&quot;,
if(Pathway__c=&quot;IT, Software and Telecoms&quot;,&quot;Pearson BTEC Level 3 Diploma in Professional Competence for IT and Telecoms Professionals; Pearson BTEC Nationals in Information Technology (QCF)&quot;,
if(Pathway__c=&quot;Social Media &amp; Digital Marketing&quot;,&quot;Skillsfirst Awards Diploma in Social Media for Business (QCF)&quot;,
if(Pathway__c=&quot;Early Years Education&quot;,&quot;Pearson Edexcel Level 3 Diploma in Children&apos;s Learning and Development (Early Years Educator) (QCF)&quot;,
if(Pathway__c=&quot;Hospitality&quot;,&quot;Edexcel level 3 NVQ Diploma in Hospitality, Supervision and Leadership &amp; Edexcel BTEC Level 3 Award in Hospitality, Supervision and Leadership&quot;,&quot; &quot;))))))</formula>
        <label>Programme of Learning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provide_brief_explanation_of_feedback__c</fullName>
        <label>Provide brief explanation of feedback</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registered_Charity_Number__c</fullName>
        <formula>Step_Forward_Job__r.Registered_Charity_Number__c</formula>
        <label>Registered Charity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Company_Number__c</fullName>
        <formula>Step_Forward_Job__r.Registered_Company_Number__c</formula>
        <label>Registered Company Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Organisation_Address__c</fullName>
        <formula>Step_Forward_Job__r.Registered_Organisation_Address__c</formula>
        <label>Registered Organisation Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Organisation_Name__c</fullName>
        <formula>Step_Forward_Job__r.Registered_Organisation_Name__c</formula>
        <label>Registered Organisation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Barometer_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Barometer Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_General_Information_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send General Information Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skills_First_Registration_Number__c</fullName>
        <inlineHelpText>Used by Delivery</inlineHelpText>
        <label>ULN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step_Forward_Activity__c</fullName>
        <label>Step Forward Activity</label>
        <referenceTo>Step_Forward_Activity__c</referenceTo>
        <relationshipName>Step_Forward_Matches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Step_Forward_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step Forward Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step_Forward_Job_Name__c</fullName>
        <formula>Step_Forward_Job__r.Step_Forward_Job_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step Forward Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Forward_Job__c</fullName>
        <label>Step Forward Job</label>
        <referenceTo>Step_Forward_Job__c</referenceTo>
        <relationshipName>Step_Forward_Matches</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>